# rust-rog

./: Cargo.toml  README.md
src/: main.rs  rusb_main.rs
src/requests/: confirm.rs  get_dpi_data.rs  get_leds.rs  get_power_data.rs  get_profile_and_firmware_v.rs  mod.rs  set_active_profile.rs  set_light_mode.rs
